fixed overflow on menu builder, display money correctly on menu builder

--- a/client/src/MenuBuilder/components/MenuBuilder.css
+++ b/client/src/MenuBuilder/components/MenuBuilder.css
@@ -66,3 +66,10 @@
 .menubuilder-remove-button:hover, .menubuilder-toggle:hover {
     color: grey;
 }
+.editmenu-container{
+    overflow: hidden;
+}
+.menubuilder-body-container{
+    height: 100%;
+    overflow: scroll;
+}
